added andy keynote

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
       </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                    <!-- <li class="nav-item">
+                    <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#keynotes">Program</a>
-                    </li> -->
+                    </li>
                     <!--<li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#memory">BENEVOL Memory</a>
                     </li>-->
@@ -89,22 +89,22 @@
             </div>
         </div>
     </header>
-    <!--
+
     <div class="modal fade" id="firstKeynote" tabindex="-1" role="dialog" aria-labelledby="firstKeynoteTitle"
     aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-            <h5 class="modal-title" id="firstKeynoteTitle">Title 1</h5>
+            <h5 class="modal-title" id="firstKeynoteTitle">Title TBA</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
             </div>
             <div class="modal-body">
             <h4>Abstract</h4>
-            <p class="text-justify">Insert abstract here.</p>
+            <p class="text-justify">TBA.</p>
             <h4>Biography</h4>
-            <p class="text-justify">Insert biography here.</p>
+            <p class="text-justify">Andy Zaidman received the MSc and PhD degrees in computer science from the University of Antwerp, Belgium, in 2002 and 2006, respectively. He joined Delft University of Technology in 2006, where he is currently a Full Professor in Software Engineering. His research interests include software evolution, program comprehension, mining software repositories, software quality, and software testing. He is an active member of the research community and involved in the organization of numerous conferences (WCRE'08, WCRE'09, VISSOFT'14 and MSR'18). In 2013, he was the laureate of a Prestigious Vidi Mid-Career Grant, while in 2019 he received the most Prestigious Vici Career Grant from Dutch Science Foundation NWO. In 2024, Andy Zaidman became the head of department for the Department of Software Technology, which brings together 240 researchers, educators and support staff in the area of the design, engineering, and analysis of complex, distributed, and data-intensive software and computer systems.</p>
             </div>
         </div>
         </div>
@@ -158,19 +158,20 @@
                 <div class="col-lg-8 mx-auto my-4 text-justify">
                     <div class="row my-4 mx-auto">
                         <div class="col-lg-4 text-center mx-auto d-block">
-                            <a href="link" target="_blank">
-                                <img class="img-fluid rounded-circle mb-3 col-lg-9" src="img/p-placeholder.png">
+                            <a href="https://azaidman.github.io" target="_blank">
+                                <img class="img-fluid rounded-circle mb-3 col-lg-9" src="img/andy.jpg">
                             </a>
-                            <a href="link" target="_blank">
-                                <h5>Surname Name 1</h5>
-                                <p class="font-weight-light mb-0">University Name</p>
+                            <a href="https://azaidman.github.io" target="_blank">
+                                <h5>Andy Zaidman</h5>
+                                <p class="font-weight-light mb-0">Delft University of Technology</p>
                             </a>
                             <a data-toggle="modal" href="#firstKeynote">
                                 <p class="font-weight-light mt-3 mb-0 text-danger">
-                                    <u>Title</u>
+                                    <u>Keynote to be announced</u>
                                 </p>
                             </a>
                         </div>
+                        <!--
                         <div class="col-lg-4 text-center mx-auto d-block">
                             <a href="link" target="_blank">
                                 <img class="img-fluid rounded-circle mb-3 col-lg-9" src="img/p-placeholder.png">
@@ -199,6 +200,7 @@
                                 </p>
                             </a>
                         </div>
+                        -->
                     </div>
                 </div>
             </div>
@@ -212,7 +214,7 @@
             <p style="text-align: center;">To be announced...</p>
         </div>
     </section>
-    -->
+
     <!-- organization -->
     <section class="bg-white page-section" id="organization">
         <div class="container">
