Adding logo sponsoring En Mieux

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                                 <img class="img-fluid mb-6 col-lg-16" src="img/facinfo.png" alt="Faculte informatique">
                             </a>
                         </div>
-                        <div class="col-lg-2 text-center mx-auto d-block">
+                        <div class="col-lg-3 text-center mx-auto d-block">
                             <a href="https://www.frs-fnrs.be/" target="_blank">
                                 &nbsp;&nbsp;&nbsp;&nbsp;
                                 <img class="img-fluid mb-6 col-lg-16" src="img/fnrs.png" alt="FNRS">
@@ -479,7 +479,13 @@
                                 <img class="img-fluid mb-6 col-lg-16" src="img/precise.png" alt="PRECISE">
                             </a>
                         </div>
-                        <div class="col-lg-2 text-center mx-auto d-block">
+                        <div class="col-lg-6 text-center mx-auto d-block">
+                            <a href="https://www.enmieux.be" target="_blank">
+                                &nbsp;&nbsp;&nbsp;&nbsp;
+                                <img class="img-fluid mb-6 col-lg-16" src="img/uewallonie.jpg" alt="En Mieux">
+                            </a>
+                        </div>
+                        <div class="col-lg-3 text-center mx-auto d-block">
                             <p class="text-justify lato">
                                 <a href="https://researchportal.unamur.be/en/persons/acleve" target="_blank">Data-Intensive SofTware Evolution Lab (DISTEL)</a>
                             </p>
@@ -495,7 +501,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto my-4 text-justify">
                     <div class="row my-4 mx-auto">
-                        <div class="col-lg-2 text-center mx-auto d-block">
+                        <div class="col-lg-3 text-center mx-auto d-block">
                             <a href="https://www.linkedin.com/groups/36096/" target="_blank">
                                 <img class="img-fluid mb-6 col-lg-16" src="img/grascomp.jpg" alt="GRASCOMP">
                             </a>
