added 2nd keynote speaker and PC

--- a/index.html
+++ b/index.html
@@ -115,16 +115,16 @@
         <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-            <h5 class="modal-title" id="secondKeynoteTitle">Title 2</h5>
+            <h5 class="modal-title" id="secondKeynoteTitle">Title TBA</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
             </div>
             <div class="modal-body">
             <h4>Abstract</h4>
-            <p class="text-justify">Insert abstract here.</p>
+            <p class="text-justify">TBA.</p>
             <h4>Biography</h4>
-            <p class="text-justify">Insert biography here.</p>
+            <p class="text-justify">Sonia Haiduc is an Associate Professor in the Department of Computer Science at Florida State University, USA. Her research interests are in software maintenance and evolution, program comprehension, mining software repositories, and informal software documentation. She is a recipient of the IEEE TCSE Rising Star Award, the NSF Career Award, and two Most Influential Paper Awards among other research accolades. She has also received teaching and service awards and has served the software engineering community in many organizational and reviewing roles, including as Area Chair for ICSE 2022, PC chair for MSR 2019 and ICPC 2022, and General Chair for ICSME 2023.</p>
             </div>
         </div>
         </div>
@@ -171,21 +171,22 @@
                                 </p>
                             </a>
                         </div>
-                        <!--
+                        
                         <div class="col-lg-4 text-center mx-auto d-block">
-                            <a href="link" target="_blank">
-                                <img class="img-fluid rounded-circle mb-3 col-lg-9" src="img/p-placeholder.png">
+                            <a href="https://www.cs.fsu.edu/~shaiduc" target="_blank">
+                                <img class="img-fluid rounded-circle mb-3 col-lg-9" src="img/sonia.jpg">
                             </a>
-                            <a href="link" target="_blank">
-                                <h5>Surname Name 2</h5>
-                                <p class="font-weight-light mb-0">University Name</p>
+                            <a href="https://www.cs.fsu.edu/~shaiduc" target="_blank">
+                                <h5>Sonia Haiduc</h5>
+                                <p class="font-weight-light mb-0">Florida State<br>University</p>
                             </a>
                             <a data-toggle="modal" href="#secondKeynote">
                                 <p class="font-weight-light mt-3 mb-0 text-danger">
-                                    <u>Title</u>
+                                    <u>Keynote to be announced</u>
                                 </p>
                             </a>
                         </div>
+                        <!--
                         <div class="col-lg-4 text-center mx-auto d-block">
                             <a href="link" target="_blank">
                                 <img class="img-fluid rounded-circle mb-3 col-lg-9" src="img/p-placeholder.png">
@@ -291,7 +292,7 @@
                                 </p>
                             </a>
                         </div>
-                        <div class="col-lg-4 text-center mx-auto d-block">
+                        <div class="col-lg-4 text-center mx-auto d-block" style="margin-top: 20px;">
                             <a href="https://informatique.umons.ac.be/perso/Mens.Tom" target="_blank">
                                 <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/tom.jpeg" alt="Tom Mens Picture">
                             </a>
@@ -304,17 +305,32 @@
                         </div>
                     </div>
                     <br />
-                    <!-- <br />
+                    <br />
                     <h4 class="section-heading">Program Committee</h4>
                     <div class="row">
                         <div class="col-lg-12 col-md-12 text-left">
                             <div class="mt-5">
                                 <ul>
-                                    <li><a href="link">Surname Name</a>, University Name, Country</li>
+                                    <li><a href="https://www.gemmacatolino.com">Gemma Catolino</a>, University of Salerno, Italy</li>
+                                    <li><a href="https://www.tue.nl/en/research/researchers/michel-chaudron">Michel Chaudron</a>, Eindhoven University of Technology, Netherlands</li>
+                                    <li><a href="https://luiscruz.github.io">Luis Cruz</a>, Delft University of Technology, Netherlands</li>
+                                    <li><a href="http://soft.vub.ac.be/~cderoove">Coen	De Roover</a>, Vrije Universiteit Brussel, Belgium</li>
+                                    <li><a href="http://ansymo.uantwerpen.be">Serge Demeyer</a>, Universiteit Antwerpen (ANSYMO), Belgium</li>
+                                    <li><a href="https://www.cristal.univ-lille.fr/~etien">Anne	Etien</a>, University of Lille (CRIStAL), France</li>
+                                    <li><a href="http://www.labri.fr/~falleri">Jean-Rémy Falleri</a>, Bordeaux INP, France</li>
+                                    <li><a href="https://sfortz.github.io">Sophie Fortz</a>, King's College London, United Kingdom</li>
+                                    <li><a href="https://fermadeiral.github.io">Fernanda Madeiral</a>, Vrije Universiteit Amsterdam, Netherlands</li>
+                                    <li><a href="http://staff.umons.ac.be/tom.mens">Tom Mens</a>, University of Mons, Belgium</li>
+                                    <li><a href="https://jnsll.github.io">June Sallou</a>, Delft University of Technology, Netherlands</li>
+                                    <li><a href="http://www.win.tue.nl/~aserebre">Alexander Serebrenik</a>, Eindhoven University of Technology, Netherlands</li>
+                                    <li><a href="www.lirmm.fr/~seriai">Abdelhak Seriai</a>, University of Montpellier (Lirmm), France</li>
+                                    <li><a href="https://templep.github.io">Paul Temple</a>, University of Rennes, France</li>
+                                    <li><a href="https://mairieli.com">Mairieli Wessel</a>, Radboud University, Netherlands</li>
+                                    <li><a href="http://upsilon.cc/~zack">Stefano Zacchiroli</a>, Polytechnic Institute of Paris (Télécom Paris), France</li>
                                 </ul>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
             </div>
     </section>
