Update PC members

--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto my-2 my-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#keynotes">Program</a>
+                        <a class="nav-link js-scroll-trigger" href="#keynotes">Keynotes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#program">Program</a>
                     </li>
                     <!--<li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#memory">BENEVOL Memory</a>
@@ -311,6 +314,7 @@
                         <div class="col-lg-12 col-md-12 text-left">
                             <div class="mt-5">
                                 <ul>
+                                    <li><a href="https://www.gemmacatolino.com">Andrea Capiluppi</a>, University of Groningen, Netherlands</li>
                                     <li><a href="https://www.gemmacatolino.com">Gemma Catolino</a>, University of Salerno, Italy</li>
                                     <li><a href="https://www.tue.nl/en/research/researchers/michel-chaudron">Michel Chaudron</a>, Eindhoven University of Technology, Netherlands</li>
                                     <li><a href="https://luiscruz.github.io">Luis Cruz</a>, Delft University of Technology, Netherlands</li>
@@ -323,7 +327,7 @@
                                     <li><a href="http://staff.umons.ac.be/tom.mens">Tom Mens</a>, University of Mons, Belgium</li>
                                     <li><a href="https://jnsll.github.io">June Sallou</a>, Delft University of Technology, Netherlands</li>
                                     <li><a href="http://www.win.tue.nl/~aserebre">Alexander Serebrenik</a>, Eindhoven University of Technology, Netherlands</li>
-                                    <li><a href="www.lirmm.fr/~seriai">Abdelhak Seriai</a>, University of Montpellier (Lirmm), France</li>
+                                    <li><a href="www.lirmm.fr/~seriai">Abdelhak-Djamel Seriai</a>, University of Montpellier (Lirmm), France</li>
                                     <li><a href="https://templep.github.io">Paul Temple</a>, University of Rennes, France</li>
                                     <li><a href="https://mairieli.com">Mairieli Wessel</a>, Radboud University, Netherlands</li>
                                     <li><a href="http://upsilon.cc/~zack">Stefano Zacchiroli</a>, Polytechnic Institute of Paris (Télécom Paris), France</li>
