Update PC members

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                         <div class="col-lg-12 col-md-12 text-left">
                             <div class="mt-5">
                                 <ul>
-                                    <li><a href="https://www.gemmacatolino.com">Andrea Capiluppi</a>, University of Groningen, Netherlands</li>
+                                    <li><a href="https://www.rug.nl/staff/a.capiluppi/">Andrea Capiluppi</a>, University of Groningen, Netherlands</li>
                                     <li><a href="https://www.gemmacatolino.com">Gemma Catolino</a>, University of Salerno, Italy</li>
                                     <li><a href="https://www.tue.nl/en/research/researchers/michel-chaudron">Michel Chaudron</a>, Eindhoven University of Technology, Netherlands</li>
                                     <li><a href="https://luiscruz.github.io">Luis Cruz</a>, Delft University of Technology, Netherlands</li>
