--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center justify-content-center text-center">
                 <div class="col-lg-10 align-self-end">
-                    <h1 class="text-uppercase text-white font-weight-bold">BENEVOL 2024 </h1>
+                    <img class="img-fluid" src="img/logo-benevol.png" alt="BENEVOL 2024">
+                    <!--<h1 class="text-uppercase text-white font-weight-bold">BENEVOL 2024 </h1>-->
                     <hr class="divider my-4">
                 </div>
                 <div class="col-lg-12 align-self-baseline text-white">
