Adding Amelie to organization

--- a/index.html
+++ b/index.html
@@ -275,15 +275,26 @@
                             </a>
                         </div>
                         <div class="col-lg-4 text-center mx-auto d-block">
-                                <a href="https://directory.unamur.be/staff/bdiguard" target="_blank">
-                                    <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/babette.jpg" alt="Babette Di Guardia Picture">
-                                </a>
-                                <a href="https://directory.unamur.be/staff/bdiguard" target="_blank">
-                                    <h5>Babette Di Guardia</h5>
-                                    <p class="font-weight-light mb-0">
-                                        <b>Local Arrangement Chair</b> <br /> University of Namur, Belgium
-                                    </p>
-                                </a>
+                            <a href="https://directory.unamur.be/staff/bdiguard" target="_blank">
+                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/babette.jpg" alt="Babette Di Guardia Picture">
+                            </a>
+                            <a href="https://directory.unamur.be/staff/bdiguard" target="_blank">
+                                <h5>Babette Di Guardia</h5>
+                                <p class="font-weight-light mb-0">
+                                    <b>Local Arrangement Chair</b> <br /> University of Namur, Belgium
+                                </p>
+                            </a>
+                        </div>
+                        <div class="col-lg-4 text-center mx-auto d-block">
+                            <a href="https://directory.unamur.be/staff/notaroa" target="_blank">
+                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/amelie.jpg" alt="Amelie Notaro Picture">
+                            </a>
+                            <a href="https://directory.unamur.be/staff/notaroa" target="_blank">
+                                <h5>Amélie Notaro</h5>
+                                <p class="font-weight-light mb-0">
+                                    <b>Local Arrangement Chair</b> <br /> University of Namur, Belgium
+                                </p>
+                            </a>
                         </div>
                         <div class="col-lg-4 text-center mx-auto d-block">
                             <a href="https://alixdecr.github.io" target="_blank">
