Adding registration information

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                         <a class="nav-link js-scroll-trigger" href="#cfp">CFP</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#registration">Registration</a>
+                      </li>
+                    <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#venue">Venue & Accomodation</a>
                     </li>
                     <!--<li class="nav-item">
@@ -432,6 +435,21 @@
         </div>
     </section>
     
+    <section class="bg-light page-section" id="registration">
+        <div class="container">
+            <h2 class="text-center mt-0">Registration</h2>
+            <hr class="divider my-4">
+            <div class="row my-4 mx-auto">
+                <div class=" col-lg-8 mx-auto mt-4 mb-2 text-center">
+                    <p class="text-justify lato">
+                        Thanks to the support of our sponsors, participation is free! Register to BENEVOL 2024 via <a href="https://www.billetweb.fr/benevol-2024">https://www.billetweb.fr/benevol-2024</a>.
+                         If, unfortunately, you must cancel your participation, please let us know as soon as possible (via e-mail to <a href="mailto:secretariat.info@unamur.be?subject=BENEVOL2024%20Registration">secretariat.info@unamur.be</a>) to avoid any waste.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="bg-white page-section" id="venue">
         <div class="container">
             <h2 class="text-center mt-0">Venue and Accomodation</h2>
