--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
         </div>
     </section>
     
-    <section class="bg-light page-section" id="registration">
+    <section class="bg-white page-section" id="registration">
         <div class="container">
             <h2 class="text-center mt-0">Registration</h2>
             <hr class="divider my-4">
@@ -450,7 +450,7 @@
         </div>
     </section>
 
-    <section class="bg-white page-section" id="venue">
+    <section class="bg-light page-section" id="venue">
         <div class="container">
             <h2 class="text-center mt-0">Venue and Accomodation</h2>
             <hr class="divider my-4">
