Adding info about IMPACT! day

--- a/index.html
+++ b/index.html
@@ -218,8 +218,42 @@
     <section class="bg-light page-section" id="program">
         <div class="container">
             <h2 class="text-center mt-0">Program</h2>
-            <br>
-            <p style="text-align: center;">To be announced...</p>
+            <hr class="divider my-4">
+            <div class="row">
+                <div class="col-lg-8 mx-auto mt-4 mb-2 text-justify">
+                    <h4>Wednesday 20 November 2024 - IMPACT! Day</h4>
+                    <div class="col-lg-6 text-center mx-auto d-block">
+                        <!--<a href="https://info.unamur.be" target="_blank">-->
+                            <img class="img-fluid" src="img/impact.png" alt="IMPACT!">
+                        <!--</a>-->
+                    </div>
+                    <p class="text-justify lato">
+                        Are you eager to leverage your research into a game-changing industrial breakthrough? Join us for a day of insightful exchange with practitioners, exposing the challenges they encounter daily. Brainstorm actual solutions exploiting your research and findings with them. Learn to communicate what you bring to the table efficiently thanks to the tried and tested <i>Value Proposition canvas</i>.
+                    </p>
+                    <p class="text-justify lato">
+                        The day will be split into two parts. In the morning, researchers will attend a training session introducing the Value Proposition Canvas. This training session aims to help them think about the potential and impact of their research from the angle of short-term industrialization. 
+                    </p>
+                    <p class="text-justify lato">
+                        In the afternoon, a world café will bring together researchers and industry stakeholders who have come to discuss current software engineering and evolution challenges encountered in their day-to-day business. The aim of this meeting? To generate innovative ideas, identify new leads for scientific research, uncover new developments to be tested in the field, and, above all, open avenues for collaboration between research and industry people.
+                    </p>
+                    <p class="text-justify lato">
+                        The IMPACT! Day initiative is supported by the GRASCOMP doctoral school. <b>Participants will be awarded one transversal course ECTS credit</b> (Art. 14, Annex 4, <a href="https://www.unamur.be/fr/media/3198">RDUN</a>).
+                    </p>
+                    <p class="text-justify lato">
+                        Stay tuned for the detailed program of the day. 😉
+                    </p>
+                    <br/>
+                    <h4>Thursday 21 November 2024 - BENEVOL Day 1</h4>
+                    <p class="text-justify lato">
+                        To be announced...
+                    </p>
+                    <br/>
+                    <h4>Friday 21 November 2024 - BENEVOL Day 2</h4>
+                    <p class="text-justify lato">
+                        To be announced...
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
 
