Adding wednesday in the title page

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="col-lg-12 align-self-baseline text-white">
                     <h2>The 23rd Belgium-Netherlands Software Evolution Workshop</h2>
-                    <h2 class="mb-5">Thu 21 - Fri 22 November 2024, Namur Belgium</h2>
+                    <h2 class="mb-5">(Wed 20 +) Thu 21 - Fri 22 November 2024, Namur Belgium</h2>
                 </div>
             </div>
         </div>
