adding corentin and anthony keynote speakers

--- a/index.html
+++ b/index.html
@@ -142,16 +142,36 @@
         <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-            <h5 class="modal-title" id="thirdKeynoteTitle">Title 3</h5>
+            <h5 class="modal-title" id="thirdKeynoteTitle">IMPACT! Day</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
             </div>
             <div class="modal-body">
             <h4>Abstract</h4>
-            <p class="text-justify">Insert abstract here.</p>
+            <p class="text-justify">Are you eager to leverage your research into a game-changing industrial breakthrough? Join us for a day of insightful exchange with practitioners, exposing the challenges they encounter daily. Brainstorm actual solutions exploiting your research and findings with them. Learn to communicate what you bring to the table efficiently thanks to the tried and tested Value Proposition canvas.</p>
             <h4>Biography</h4>
-            <p class="text-justify">Insert biography here.</p>
+            <p class="text-justify">Pr. Dr. Anthony Simonofski is Professor of Digital Transformation at the Business Administration department in the University of Namur, Belgium. He is also the co-founder of the Research Center on Management of Information and Digital Transformation (MINDIT) in the Namur Digital Institute. In 2019, he received his PhD in Business Economics from KU Leuven and his PhD in Computer Science from UNamur. His research and teaching focus on the digital transformation of organizations through several lenses, including public sector transformation (smart cities, open data, digital government, e-participation), user participation, digital strategy, agile transformation, business process management and enterprise architecture. Finally, he is a pop-culture enthusiast and is the co-host of the <a href="https://podcast.ausha.co/popcode">Pop-Code podcast</a> about the relations between digital technologies and cinema.</p>
+            </div>
+        </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="fourthKeynote" tabindex="-1" role="dialog" aria-labelledby="fourthKeynoteTitle"
+    aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="thirdKeynoteTitle">IMPACT! Day</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            </div>
+            <div class="modal-body">
+            <h4>Abstract</h4>
+            <p class="text-justify">Are you eager to leverage your research into a game-changing industrial breakthrough? Join us for a day of insightful exchange with practitioners, exposing the challenges they encounter daily. Brainstorm actual solutions exploiting your research and findings with them. Learn to communicate what you bring to the table efficiently thanks to the tried and tested Value Proposition canvas.</p>
+            <h4>Biography</h4>
+            <p class="text-justify">Corentin Burnay is Associate Professor of Information and Strategic Management at the University of Namur, Belgium. He holds a Ph.D. in Management Sciences from the University of Namur. He is head of the UNamur School of Management and of the research center on Management of Information and Digital Transformation (MINDIT). He conducts research on the engineering of requirements for AI-based systems, on digitalisation of strategic decisions and business intelligence, that he studies with the particular angle of informational overloads and dual processing theory.</p>
             </div>
         </div>
         </div>
@@ -178,7 +198,6 @@
                                 </p>
                             </a>
                         </div>
-                        
                         <div class="col-lg-4 text-center mx-auto d-block">
                             <a href="https://azaidman.github.io" target="_blank">
                                 <img class="img-fluid rounded-circle mb-3 col-lg-9" src="img/andy.jpg">
@@ -193,22 +212,36 @@
                                 </p>
                             </a>
                         </div>
-                        <!--
+                    </div>
+                    <div class="row my-4 mx-auto">
                         <div class="col-lg-4 text-center mx-auto d-block">
-                            <a href="link" target="_blank">
-                                <img class="img-fluid rounded-circle mb-3 col-lg-9" src="img/p-placeholder.png">
+                            <a href="https://www.unamur.be/fr/profil/asimonof" target="_blank">
+                                <img class="img-fluid rounded-circle mb-3 col-lg-9" src="img/anthony.png">
                             </a>
-                            <a href="link" target="_blank">
-                                <h5>Surname Name 3</h5>
-                                <p class="font-weight-light mb-0">University Name</p>
+                            <a href="https://www.unamur.be/fr/profil/asimonof" target="_blank">
+                                <h5>Anthony Simonofski</h5>
+                                <p class="font-weight-light mb-0">University of Namur</p>
                             </a>
                             <a data-toggle="modal" href="#thirdKeynote">
                                 <p class="font-weight-light mt-3 mb-0 text-danger">
-                                    <u>Title</u>
+                                    <u>IMPACT! Day: Bridging the gap between Research and Practice</u>
                                 </p>
                             </a>
                         </div>
-                        -->
+                        <div class="col-lg-4 text-center mx-auto d-block">
+                            <a href="https://www.unamur.be/fr/profil/cburnay" target="_blank">
+                                <img class="img-fluid rounded-circle mb-3 col-lg-9" src="img/corentin.jpg">
+                            </a>
+                            <a href="https://www.unamur.be/fr/profil/cburnay" target="_blank">
+                                <h5>Corentin Burnay</h5>
+                                <p class="font-weight-light mb-0">University of Namur</p>
+                            </a>
+                            <a data-toggle="modal" href="#fourthKeynote">
+                                <p class="font-weight-light mt-3 mb-0 text-danger">
+                                    <u>IMPACT! Day: Applying the Value Proposition Canvas to your research</u>
+                                </p>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -239,9 +272,7 @@
                     <p class="text-justify lato">
                         The IMPACT! Day initiative is supported by the GRASCOMP doctoral school. <b>Participants will be awarded one transversal course ECTS credit</b> (Art. 14, Annex 4, <a href="https://www.unamur.be/fr/media/3198">RDUN</a>).
                     </p>
-                    <p class="text-justify lato">
-                        Stay tuned for the detailed program of the day. 😉
-                    </p>
+                    
                     <br/>
                     <h4>Thursday 21 November 2024 - BENEVOL Day 1</h4>
                     <p class="text-justify lato">
