added impact program

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <h2 class="text-center mt-0">Program</h2>
             <hr class="divider my-4">
             <div class="row">
-                <div class="col-lg-8 mx-auto mt-4 mb-2 text-justify">
+                <div class="col-lg-10 mx-auto mt-4 mb-2 text-justify">
                     <h4>Wednesday 20 November 2024 - IMPACT! Day</h4>
                     <div class="col-lg-6 text-center mx-auto d-block">
                         <!--<a href="https://info.unamur.be" target="_blank">-->
@@ -272,7 +272,73 @@
                     <p class="text-justify lato">
                         The IMPACT! Day initiative is supported by the GRASCOMP doctoral school. <b>Participants will be awarded one transversal course ECTS credit</b> (Art. 14, Annex 4, <a href="https://www.unamur.be/fr/media/3198">RDUN</a>).
                     </p>
-                    
+                    <br>
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th scope="col" style="width: 15%; margin: 0; padding: 0;"></th>
+                                <th scope="col" style="width: 85%; margin: 0; padding: 0;"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td colspan="2">
+                                    <div class="day"><strong>20</strong></div>
+                                    <div><strong>Wednesday</strong></div>
+                                    <div class="shortdate text-muted"><strong>November, 2024</strong></div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>09:45 - 10:00</td>
+                                <td>Opening</td>
+                            </tr>
+                            <tr>
+                                <td>10:00 - 10:30</td>
+                                <td><strong>Keynote: Anthony Simonofski</strong><br>
+                                    <a data-toggle="modal" href="#thirdKeynote">
+                                        <u>Theory - Bridging the gap between Research and Practice</u>
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>10:30 - 11:00</td>
+                                <td><strong>Keynote: Corentin Burnay</strong><br>
+                                    <a data-toggle="modal" href="#fourthKeynote">
+                                        <u>Training - Applying the Value Proposition Canvas to your Research</u>
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>11:00 - 11:15</td>
+                                <td>Break</td>
+                            </tr>
+                            <tr>
+                                <td>11:15 - 12:30</td>
+                                <td><strong>Hands on Session - Build your Value Proposition Canvas</strong></td>
+                            </tr>
+                            <tr>
+                                <td>12:30 - 13:30</td>
+                                <td>Lunch Break</td>
+                            </tr>
+                            <tr>
+                                <td>13:30 - 14:30</td>
+                                <td><strong>Introductory Panel by Industrial Guests</strong></td>
+                            </tr>
+                            <tr>
+                                <td>14:30 - 15:30</td>
+                                <td><strong>World Café – Bringing Forces Together to Address Current Challenges</strong></td>
+                            </tr>
+                            <tr>
+                                <td>15:30 - 16:00</td>
+                                <td>Coffee Break</td>
+                            </tr>
+                            <tr>
+                                <td>16:00 - 16:30</td>
+                                <td><strong>Debrief all Together</strong></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                
                     <br/>
                     <!-------------------------------------------------------->
                     <h4>Thursday 21 November 2024 - BENEVOL Day 1</h4>
