--- a/index.html
+++ b/index.html
@@ -638,14 +638,13 @@
                 <div class="col-lg-8 mx-auto my-4 text-justify">
                     <div class="row my-4 mx-auto">
                         <div class="col-lg-2 text-center mx-auto d-block">
-                            <a href="https://info.unamur.be" target="_blank">
-                                <img class="img-fluid mb-6 col-lg-16" src="img/facinfo.png" alt="Faculte informatique">
+                            <a href="https://unamur.be" target="_blank">
+                                <img class="img-fluid mb-6 col-lg-16" src="img/unamur.png" alt="Faculte informatique">
                             </a>
                         </div>
-                        <div class="col-lg-3 text-center mx-auto d-block">
-                            <a href="https://www.frs-fnrs.be/" target="_blank">
-                                &nbsp;&nbsp;&nbsp;&nbsp;
-                                <img class="img-fluid mb-6 col-lg-16" src="img/fnrs.png" alt="FNRS">
+                        <div class="col-lg-2 text-center mx-auto d-block">
+                            <a href="https://info.unamur.be" target="_blank">
+                                <img class="img-fluid mb-6 col-lg-16" src="img/facinfo.png" alt="Faculte informatique">
                             </a>
                         </div>
                         <div class="col-lg-3 text-center mx-auto d-block">
@@ -654,12 +653,18 @@
                                 <img class="img-fluid mb-6 col-lg-16" src="img/nadi.jpg" alt="NADI">
                             </a>
                         </div>
-                    </div>
-                    <div class="row my-4 mx-auto">
                         <div class="col-lg-3 text-center mx-auto d-block">
                             <a href="https://nadi.unamur.be/research-centers/precise" target="_blank">
                                 &nbsp;&nbsp;&nbsp;&nbsp;
                                 <img class="img-fluid mb-6 col-lg-16" src="img/precise.png" alt="PRECISE">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row my-4 mx-auto">
+                        <div class="col-lg-3 text-center mx-auto d-block">
+                            <a href="https://www.frs-fnrs.be/" target="_blank">
+                                &nbsp;&nbsp;&nbsp;&nbsp;
+                                <img class="img-fluid mb-6 col-lg-16" src="img/fnrs.png" alt="FNRS">
                             </a>
                         </div>
                         <div class="col-lg-6 text-center mx-auto d-block">
