--- a/index.html
+++ b/index.html
@@ -341,13 +341,7 @@
                 
                     <br/>
                     <!-------------------------------------------------------->
-                    <h4>Thursday 21 November 2024 - BENEVOL Day 1</h4>
-                    <p class="text-justify lato">
-                        To be announced...
-                    </p>
-                    <br/>
-                    <!-------------------------------------------------------->
-                    <h4>Friday 22 November 2024 - BENEVOL Day 2</h4>
+                    <h4>Thursday 21 and Friday 22 November 2024 - BENEVOL</h4>
                     <p class="text-justify lato">
                         To be announced...
                     </p>
